<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.home.HomeFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/homeIm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_transfer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/data_accessible"
            android:textAlignment="center"
            android:textColor="@color/textColourDark"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeIm" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu"
                android:text="@string/updated"
                android:textAlignment="textEnd"
                android:textColor="@color/textColourDark"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textUpdateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/today"
                android:textColor="@color/textColourDark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/primaryColour"
            android:elevation="0dp"
            android:fontFamily="@font/ubuntu_bold"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:shadowColor="@android:color/transparent"
            android:text="@string/update"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColourDark"
            app:cornerRadius="32dp"
            app:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>